# limitless

./: README.md
plugins/codies-memory/: INSTALL.md  README.md  pyproject.toml
plugins/codies-memory/.claude-plugin/: plugin.json
plugins/codies-memory/docs/: TESTING-CHECKLIST.md  agent-smoke.md
plugins/codies-memory/docs/brainstorms/: 2026-04-03-global-daily-log-requirements.md
plugins/codies-memory/docs/original/: 01-principles.md  02-architecture.md  03-memory-products.md  04-retrieval-and-promotion.md  05-schemas-and-operations.md  06-roadmap.md  review.md
plugins/codies-memory/docs/plans/: 2026-04-01-operator-surface-follow-up.md  2026-04-01-v2-implementation.md  2026-04-21-vnext-implementation-plan.md
plugins/codies-memory/docs/specs/: 2026-03-30-codie-review-of-first-implementation-pass.md  2026-03-30-codie-review-of-lite-v2-and-scaffold.md  2026-03-30-codies-memory-lite-v2.md  2026-03-30-codies-memory-lite.md  2026-03-30-implementation-plan.md  2026-03-30-scaffold-design.md  2026-03-30-vault-layout-v2.md  2026-03-31-opencode-integration-review.md  2026-04-01-codie-review-of-current-repo-state.md  2026-04-01-codie-review-of-pr-follow-up.md  2026-04-01-v2-vault-layout-bugfixes-cli.md  2026-04-21-codies-memory-vnext-marketplace-design.md
plugins/codies-memory/scripts/: smoke.sh
plugins/codies-memory/skills/memory-boot/: SKILL.md
plugins/codies-memory/tests/: conftest.py  test_boot.py  test_cli.py  test_docs_operator_surface.py  test_inbox.py  test_profile.py  test_promotion.py  test_records.py  test_schemas.py  test_vault.py  test_warm.py
(+313 files in other folders)
